@startuml
skinparam classAttributeIconSize 0

title AUCA Mentorship Portal - Class Diagram

class User {
  -id: int
  -name: string
  -email: string
  -password_hash: string
  -role: string
  -bio: string
  +register()
  +login()
  +updateProfile()
}

class MentorProfile {
  -id: int
  -expertise: array
  -department: string
  -approval_status: string
  -availability: string
  +applyAsMentor()
  +getApprovedMentors()
}

class Session {
  -id: int
  -title: string
  -description: string
  -scheduled_at: datetime
  -status: string
  -duration: int
  +bookSession()
  +acceptSession()
  +completeSession()
}

class Feedback {
  -id: int
  -rating: int
  -review: string
  +submitFeedback()
  +getMentorFeedback()
}

User "1" -- "0..1" MentorProfile : has
User "1" -- "0..*" Session : books
User "1" -- "0..*" Session : mentors
Session "1" -- "0..1" Feedback : receives
User "1" -- "0..*" Feedback : gives
User "1" -- "0..*" Feedback : receives

note right of User
  role can be:
  'mentee', 'mentor', 
  or 'admin'
end note

note bottom of Session
  status can be:
  pending, accepted,
  declined, completed,
  cancelled
end note

@enduml